--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
+/* Reset */
 *, *:before, *:after {
   box-sizing: border-box; }
 
-/* Reset */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -59,8 +59,7 @@ button:disabled {
   height: 0;
   margin-left: 2px;
   vertical-align: middle;
-  border-top: 4px dashed;
-  border-top: 4px solid \9;
+  border-top: 4px solid;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent; }
 
@@ -105,7 +104,9 @@ nav {
       cursor: pointer;
       padding-right: 10px;
       transition: all 0.3s; }
-      @media (max-width: 768px) {
+      nav .nav__left-side a:hover {
+        background-color: #cbca4c; }
+      @media (max-width: 767px) {
         nav .nav__left-side a {
           padding-right: 0; } }
       nav .nav__left-side a img {
@@ -115,22 +116,20 @@ nav {
         padding-left: 10px;
         float: left;
         color: #333; }
-        @media (max-width: 768px) {
+        @media (max-width: 767px) {
           nav .nav__left-side a span {
             display: none; } }
-      nav .nav__left-side a:hover {
-        background-color: #cbca4c; }
   nav .nav__right-side {
     float: right; }
     nav .nav__right-side > a {
       cursor: pointer;
       transition: all 0.3s; }
+      nav .nav__right-side > a:hover {
+        background-color: #cbca4c; }
       nav .nav__right-side > a img {
         float: left; }
       nav .nav__right-side > a span {
         display: inline-block; }
-      nav .nav__right-side > a:hover {
-        background-color: #cbca4c; }
     nav .nav__right-side ul {
       background-color: #fcfcfc;
       border: 1px solid #eee;
@@ -168,12 +167,12 @@ nav {
   width: 70%;
   max-width: 1100px;
   margin: auto; }
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     .page-wrapper {
       width: 90%; } }
   .page-wrapper .ideas-section, .page-wrapper .ideas-user-section {
     padding-top: 35px; }
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
       .page-wrapper .ideas-section, .page-wrapper .ideas-user-section {
         padding-top: 17.5px; } }
     .page-wrapper .ideas-section .ideas-filter, .page-wrapper .ideas-user-section .ideas-filter {
@@ -191,7 +190,7 @@ nav {
     padding-top: 5px; }
   .page-wrapper .user-section {
     padding-top: 35px; }
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
       .page-wrapper .user-section {
         padding-top: 8.75px; } }
     .page-wrapper .user-section .user-bio {
@@ -204,7 +203,7 @@ nav {
       font-size: 16px;
       display: flex;
       flex-direction: column; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .page-wrapper .user-section .user-bio {
           padding: 20px;
           margin-top: 25px;
@@ -220,12 +219,12 @@ nav {
           margin: 0 auto;
           width: 150px;
           height: 150px;
-          border: 1px solid #ddd;
+          border: 1px solid #d1d1d1;
           border-radius: 10px; }
-        @media (max-width: 767px) {
-          .page-wrapper .user-section .user-bio__main__avatar {
-            width: 100px;
-            height: 100px; } }
+          @media (max-width: 767px) {
+            .page-wrapper .user-section .user-bio__main__avatar {
+              width: 100px;
+              height: 100px; } }
         .page-wrapper .user-section .user-bio__main__username {
           text-align: center;
           padding-top: 15px; }
@@ -279,15 +278,13 @@ nav {
     margin: 50px 0;
     box-shadow: 10px 10px 15px -10px #1b1c05;
     font-size: 16px; }
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
       .page-wrapper .idea {
         padding: 20px;
-        margin: 25px 0; }
-      .page-wrapper .idea__footer {
-        padding-bottom: 30px; } }
+        margin: 25px 0; } }
     .page-wrapper .idea:first-of-type {
       margin-top: 35px; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .page-wrapper .idea:first-of-type {
           margin: 17.5px 0; } }
     .page-wrapper .idea__header {
@@ -295,7 +292,7 @@ nav {
       font-weight: 600;
       overflow: hidden;
       clear: left; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .page-wrapper .idea__header {
           font-size: 0.8em; } }
       .page-wrapper .idea__header__name {
@@ -310,13 +307,13 @@ nav {
         margin-right: 10px;
         border-radius: 30px;
         padding: 3px 15px; }
-        @media (max-width: 768px) {
+        @media (max-width: 767px) {
           .page-wrapper .idea__header__rating {
             padding: 1px 2px;
             margin-right: 0; } }
         .page-wrapper .idea__header__rating span {
           padding: 4px; }
-          @media (max-width: 768px) {
+          @media (max-width: 767px) {
             .page-wrapper .idea__header__rating span {
               padding: 3px; } }
         .page-wrapper .idea__header__rating .rating {
@@ -362,6 +359,9 @@ nav {
           display: flex;
           flex-direction: row;
           align-items: center; }
+          @media (max-width: 767px) {
+            .page-wrapper .idea__text__mockups .img-grid {
+              flex-direction: column; } }
           .page-wrapper .idea__text__mockups .img-grid__wrapper {
             flex: 1;
             transition: all 1s;
@@ -370,9 +370,6 @@ nav {
             transition: all 1s ease-in-out;
             width: 100%;
             cursor: pointer; }
-        @media (max-width: 767px) {
-          .page-wrapper .idea__text__mockups .img-grid {
-            flex-direction: column; } }
       .page-wrapper .idea__text__tags {
         align-self: flex-end;
         margin: 30px 0 10px 0; }
@@ -390,7 +387,7 @@ nav {
       font-size: 1.1em;
       color: #627588;
       display: block; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .page-wrapper .idea__footer {
           padding-bottom: 25px; } }
       .page-wrapper .idea__footer a {
@@ -418,14 +415,21 @@ nav {
     margin: 40px;
     text-align: center; }
     .page-wrapper .page-footer__links {
-      display: inline-block;
-      line-height: 40px; }
+      display: flex;
+      line-height: 40px;
+      justify-content: center; }
+      @media (max-width: 767px) {
+        .page-wrapper .page-footer__links {
+          flex-direction: column; } }
       .page-wrapper .page-footer__links li {
         float: left;
         padding-right: 15px;
         padding-left: 15px; }
         .page-wrapper .page-footer__links li:first-of-type {
           border-right: 1px solid #d9d9d9; }
+          @media (max-width: 767px) {
+            .page-wrapper .page-footer__links li:first-of-type {
+              border: 0; } }
         .page-wrapper .page-footer__links li a {
           text-decoration: underline; }
   .page-wrapper .single-idea-section .comments {
@@ -453,10 +457,10 @@ nav {
         height: 100px;
         border: 1px solid #ddd;
         border-radius: 100px; }
-      @media (max-width: 767px) {
-        .page-wrapper .single-idea-section .comments .avatar__wrapper {
-          width: 50px;
-          height: 50px; } }
+        @media (max-width: 767px) {
+          .page-wrapper .single-idea-section .comments .avatar__wrapper {
+            width: 50px;
+            height: 50px; } }
       .page-wrapper .single-idea-section .comments .avatar__username {
         font-size: 0.65em;
         text-align: center;
@@ -473,7 +477,7 @@ nav {
         padding: 10px;
         padding-top: 3px;
         height: 150px;
-        border: 1px solid #ccc;
+        border: 1px solid #d1d1d1;
         resize: none;
         outline: none;
         border-top-left-radius: 5px;
@@ -487,16 +491,16 @@ nav {
         font-size: 0.7em;
         padding: 58px 0;
         background-color: #fafafa;
-        border: 1px solid #ccc;
+        border: 1px solid #d1d1d1;
         cursor: pointer;
         transition: all 0.5s;
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px; }
         .page-wrapper .single-idea-section .comments .input-place__button:hover {
           background-color: #f0f317; }
-      @media (max-width: 767px) {
-        .page-wrapper .single-idea-section .comments .input-place__button {
-          width: 90%; } }
+        @media (max-width: 767px) {
+          .page-wrapper .single-idea-section .comments .input-place__button {
+            width: 90%; } }
     .page-wrapper .single-idea-section .comments .comment {
       display: flex;
       justify-content: space-between;
@@ -577,7 +581,7 @@ nav {
           .page-wrapper .settings-section .settings__main .form-input input {
             line-height: 24px;
             flex: 3;
-            border: 1px solid #ccc;
+            border: 1px solid #d1d1d1;
             border-radius: 5px;
             box-shadow: none;
             padding: 2px 4px 2px 12px;
@@ -607,11 +611,13 @@ nav {
     @media (max-width: 991px) {
       .page-wrapper .newidea-section {
         padding: 20px 10px; } }
+    .page-wrapper .newidea-section .new-input {
+      display: none; }
     .page-wrapper .newidea-section h1 {
       text-align: center;
       font-size: 1.6em;
       font-weight: 600;
-      margin-bottom: 25px; }
+      margin-bottom: 20px; }
     .page-wrapper .newidea-section .new-idea {
       display: flex;
       flex-direction: column;
@@ -672,12 +678,23 @@ nav {
           @media (max-width: 767px) {
             .page-wrapper .newidea-section .new-idea .form-input button {
               margin-top: 10px; } }
+      .page-wrapper .newidea-section .new-idea__func__wrapper {
+        flex: 4;
+        display: flex;
+        flex-direction: column;
+        width: 100%; }
       .page-wrapper .newidea-section .new-idea__func input {
-        flex: 4 !important; }
+        flex: 1 !important;
+        margin-bottom: 10px !important; }
       .page-wrapper .newidea-section .new-idea__func__add {
         flex: 1;
         text-align: center;
         line-height: 24px; }
+      .page-wrapper .newidea-section .new-idea__func label, .page-wrapper .newidea-section .new-idea__func__add {
+        align-self: flex-start; }
+        @media (max-width: 767px) {
+          .page-wrapper .newidea-section .new-idea__func label, .page-wrapper .newidea-section .new-idea__func__add {
+            align-self: center; } }
       .page-wrapper .newidea-section .new-idea__mockup__add {
         flex: 5;
         line-height: 24px; }
@@ -690,12 +707,16 @@ nav {
         @media (max-width: 767px) {
           .page-wrapper .newidea-section .new-idea__other label {
             align-self: center; } }
-      .page-wrapper .newidea-section .new-idea__other__wish {
+      .page-wrapper .newidea-section .new-idea__other__wish-wrapper {
         flex: 4;
         display: flex;
         flex-direction: column;
         width: 100%; }
-        .page-wrapper .newidea-section .new-idea__other__wish input {
+        .page-wrapper .newidea-section .new-idea__other__wish-wrapper .wish-hr {
+          width: 100%;
+          margin-top: 10px;
+          margin-bottom: 20px; }
+        .page-wrapper .newidea-section .new-idea__other__wish-wrapper input {
           margin-bottom: 10px; }
       .page-wrapper .newidea-section .new-idea__other__add {
         align-self: flex-start;
@@ -715,7 +736,7 @@ nav {
       width: 50%;
       margin: 0 auto;
       font-weight: 600;
-      font-size: 1.2em;
+      font-size: 1em;
       background-color: #fff;
       box-shadow: none;
       cursor: pointer;
@@ -724,5 +745,8 @@ nav {
       transition: all 0.5s; }
       .page-wrapper .newidea-section .create-idea:hover {
         background-color: #f0f317; }
+      @media (max-width: 767px) {
+        .page-wrapper .newidea-section .create-idea {
+          width: 100%; } }
 
 /*# sourceMappingURL=styles.css.map */
