Some functionality and unit tests added
(only 3 useless unit tests)

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -580,7 +580,7 @@ nav {
         flex: 4;
 
         &__date {
-            font-size: $fontExtraSmall;
+            font-size: $fontSmall;
             color: $footerTextColor;
             align-self: flex-end;
         }
